--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,15 @@
+* {
+  margin: 0px;
+  padding: 0px ;
+}
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -13,7 +22,9 @@
 
 ul {
   /* this removes the dots on the list items*/
-  list-style-type: none;
+  list-style: none;
+  display: flex;
+  gap: 8px;
 }
 
 a {
