--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -2,6 +2,12 @@
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
+* {
+  margin: 0px;
+  padding: 0px;
+  /* border: 2px solid red; */
+}
+
 body {
   margin: 0;
   background: #eee;
@@ -12,6 +18,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 .profile-image {
@@ -45,4 +54,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+}
+
+.left,
+.right {
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
