--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0px;
+  margin: 0px;
+  /* border: 1px solid rosybrown; */
+}
+
 body {
   font-family: 'Courier New', Courier, monospace;
 }
@@ -10,6 +16,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 /* do not edit this footer */
@@ -23,4 +31,18 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.content {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 50px;
+}
+
+.p {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  flex-basis: 200px;
 }
