--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+* {
+  padding: 0px;
+  margin: 0px;
+  /* border: 1px solid rosybrown; */
+}
+
 html, body {
   height: 100%;
 }
@@ -20,6 +26,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-shrink: 0;
 }
 
 .icon {
@@ -33,6 +41,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  margin: 12px;
 }
 
 .close-button {
@@ -48,12 +58,15 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin: 8px;
+  flex-shrink: 0;
 }
 
 button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  margin-bottom: 8px;
 }
 
 button.continue {
@@ -66,4 +79,15 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header {
+  font-weight: 900;
+  font-size: 20px;
+  margin: 8px 0px;
+}
+
+.text {
+  text-align: justify;
+  margin-bottom: 12px;
 }
